--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1068,6 +1068,11 @@ select {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
+.underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
 .placeholder-gray-500::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(107 114 128 / var(--tw-placeholder-opacity));
