--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1574,6 +1574,10 @@ select {
     padding: 1rem;
   }
 
+  .md\:p-3 {
+    padding: 0.75rem;
+  }
+
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
