agrego fondo, cambios en semantica, eslint

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -766,6 +766,10 @@ select {
   border-width: 0;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .absolute {
   position: absolute;
 }
@@ -816,6 +820,10 @@ select {
   margin-top: 1rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -842,6 +850,12 @@ select {
 
 .min-h-\[calc\(100vh_-_32px_-_16px_-_16px_-_56px\)\] {
   min-height: calc(100vh - 32px - 16px - 16px - 56px);
+}
+
+.min-h-fit {
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
 }
 
 .w-full {
@@ -878,12 +892,26 @@ select {
   cursor: pointer;
 }
 
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
 .resize-y {
   resize: vertical;
 }
 
+.list-\[\'-\'\] {
+  list-style-type: '-';
+}
+
 .list-disc {
   list-style-type: disc;
+}
+
+.list-\[\'\\27A1\\fe0f\'\] {
+  list-style-type: '\27A1\fe0f';
 }
 
 .flex-row {
@@ -950,16 +978,18 @@ select {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .overflow-auto {
   overflow: auto;
 }
 
 .overflow-hidden {
   overflow: hidden;
-}
-
-.whitespace-pre-line {
-  white-space: pre-line;
 }
 
 .rounded-full {
@@ -1043,6 +1073,10 @@ select {
   background-color: rgb(240 253 244 / var(--tw-bg-opacity));
 }
 
+.bg-repeat {
+  background-repeat: repeat;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -1064,11 +1098,6 @@ select {
   padding-right: 0.75rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1086,6 +1115,10 @@ select {
 
 .pt-7 {
   padding-top: 1.75rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-center {
@@ -1264,8 +1297,8 @@ select {
     margin-right: auto;
   }
 
-  .sm\:max-w-2xl {
-    max-width: 42rem;
+  .sm\:max-w-3xl {
+    max-width: 48rem;
   }
 }
 
@@ -1366,5 +1399,12 @@ select {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
