--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -45,7 +45,10 @@
   font-style: italic;
 }
 
-
 .katex {
   font-size: inherit !important;
+}
+
+.main-background {
+  background-image: url("/img/background-mobile.png");
 }
