cambio la font y actualizo el faq

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -45,6 +45,14 @@
   font-style: italic;
 }
 
+@font-face {
+  font-family: 'Mona Sans';
+  src:
+      url('Mona-Sans.woff2') format('woff2 supports variations'),
+      url('Mona-Sans.woff2') format('woff2-variations');
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
 .katex {
   font-size: inherit !important;
 }
