--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'computer';
-  src: url('/cmunss.eot');
-  src: url('/cmunss.eot?#iefix') format('embedded-opentype'),
-  url('/cmunss.woff') format('woff'),
-  url('/cmunss.ttf') format('truetype'),
-  url('/cmunss.svg#cmunss') format('svg');
+  src: url('/fonts/cmunss.eot');
+  src: url('/fonts/cmunss.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/cmunss.woff') format('woff'),
+  url('/fonts/cmunss.ttf') format('truetype'),
+  url('/fonts/cmunss.svg#cmunss') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -12,11 +12,11 @@
 
 @font-face {
   font-family: 'computer';
-  src: url('/cmunsx.eot');
-  src: url('/cmunsx.eot?#iefix') format('embedded-opentype'),
-  url('/cmunsx.woff') format('woff'),
-  url('/cmunsx.ttf') format('truetype'),
-  url('/cmunsx.svg#cmunsx') format('svg');
+  src: url('/fonts/cmunsx.eot');
+  src: url('/fonts/cmunsx.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/cmunsx.woff') format('woff'),
+  url('/fonts/cmunsx.ttf') format('truetype'),
+  url('/fonts/cmunsx.svg#cmunsx') format('svg');
   font-weight: bold;
   font-style: normal;
 }
@@ -24,11 +24,11 @@
 
 @font-face {
   font-family: 'computer';
-  src: url('/cmunsi.eot');
-  src: url('/cmunsi.eot?#iefix') format('embedded-opentype'),
-  url('/cmunsi.woff') format('woff'),
-  url('/cmunsi.ttf') format('truetype'),
-  url('/cmunsi.svg#cmunsi') format('svg');
+  src: url('/fonts/cmunsi.eot');
+  src: url('/fonts/cmunsi.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/cmunsi.woff') format('woff'),
+  url('/fonts/cmunsi.ttf') format('truetype'),
+  url('/fonts/cmunsi.svg#cmunsi') format('svg');
   font-weight: normal;
   font-style: italic;
 }
@@ -36,11 +36,11 @@
 
 @font-face {
   font-family: 'computer';
-  src: url('/cmunso.eot');
-  src: url('/cmunso.eot?#iefix') format('embedded-opentype'),
-  url('/cmunso.woff') format('woff'),
-  url('/cmunso.ttf') format('truetype'),
-  url('/cmunso.svg#cmunso') format('svg');
+  src: url('/fonts/cmunso.eot');
+  src: url('/fonts/cmunso.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/cmunso.woff') format('woff'),
+  url('/fonts/cmunso.ttf') format('truetype'),
+  url('/fonts/cmunso.svg#cmunso') format('svg');
   font-weight: bold;
   font-style: italic;
 }
@@ -48,11 +48,12 @@
 @font-face {
   font-family: 'Mona Sans';
   src:
-      url('Mona-Sans.woff2') format('woff2 supports variations'),
-      url('Mona-Sans.woff2') format('woff2-variations');
+      url('/fonts/Mona-Sans.woff2') format('woff2 supports variations'),
+      url('/fonts/Mona-Sans.woff2') format('woff2-variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
 }
+
 .katex {
   font-size: inherit !important;
 }
