--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -46,10 +46,10 @@
 }
 
 @font-face {
-  font-family: 'Mona Sans';
+  font-family: 'Nunito';
   src:
-      url('/fonts/Mona-Sans.woff2') format('woff2 supports variations'),
-      url('/fonts/Mona-Sans.woff2') format('woff2-variations');
+      url('/fonts/nunito.woff2') format('woff2 supports variations'),
+      url('/fonts/nunito.woff2') format('woff2-variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
 }
